{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 5,
  "lineage": "6541dd26-35dc-756a-d794-b43ea4c683c7",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "micro-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "sock-shop/sock-shop",
            "metadata": [
              {
                "annotations": {
                  "kubernetes.io/ingress.class": "nginx"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {
                  "name": "front-end"
                },
                "name": "sock-shop",
                "namespace": "sock-shop",
                "resource_version": "337440",
                "uid": "c302b10d-e6b8-4e68-a4fe-c7cd3a993bb9"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "sock-shop.tonietones.me",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "front-end",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "a427357a564bd481bbd6b83bd4426f20-643776693.us-east-1.elb.amazonaws.com",
                        "ip": ""
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_eks_cluster.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "voting-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "vote-app/vote-front",
            "metadata": [
              {
                "annotations": {
                  "kubernetes.io/ingress.class": "nginx"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {
                  "name": "vote-front"
                },
                "name": "vote-front",
                "namespace": "vote-app",
                "resource_version": "337983",
                "uid": "4060be39-85af-4d2e-8f0e-cb1e473f3e2d"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "voting.tonietones.me",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "azure-vote-front",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_eks_cluster.demo"
          ]
        }
      ]
    }
  ]
}